# goit-pyweb-05

./: currency_exchange_rate.py
currency_exchange_rate/: pyproject.toml
